--- a/index.org
+++ b/index.org
@@ -25,60 +25,62 @@
   system.
   </td>
   </table>
+</br>&nbsp;</br>
 #+end_html
 
 #+begin_html
-  <table width="100%">
+  <table width="750px">
     <tr>
-      <td rowspan="2">
-      </br>&nbsp;</br>
-        <img src="http://orgmode.org/img/tasks.png" 
-             style="border:1px solid black; width:500px" 
-             alt="http://orgmode.org/img/tasks.png"/>
+      <td>
+      <img src="http://orgmode.org/img/tasks.png" 
+           style="border:1px solid black; width:500px" 
+           alt="http://orgmode.org/img/tasks.png"/>
       </td>
       
       <td>
-      <h3 style="text-align:center;">Shirts and Donations</h3>
-      <a href="http://orgmode.spreadshirt.com">
-      </br>&nbsp;</br>
-      <img src="http://orgmode.org/img/shirts.jpg" 
-             style="border:1px solid black; width:200px" 
-             alt="http://orgmode.org/img/shirts.jpg" /></a>
-             <span style="font-size: 80%;"></br>
-	     Promote Org-mode and support its development by
-	     getting your Org-mode T-shirt, bag, or cup in our stores 
-         (<a href="http://orgmode.spreadshirt.com">US-Shop</a> or
-         <a href="http://orgmode.spreadshirt.de">EU-Shop</a>)
-	 </span>
-                
-      </td>
-      </tr>
-      <tr>
+        <table width="220px">
+          <tr><td><h3 style="text-align:center;vertical-align:top">Shirts and Donations</h3></td></tr>
+          <tr>
+            <td><a href="http://orgmode.spreadshirt.com">
+                <img src="http://orgmode.org/img/shirts.jpg" 
+                     style="border:1px solid black; width:200px" 
+                     alt="http://orgmode.org/img/shirts.jpg" /></a>
+              <span style="font-size: 80%;"></br>
+                Promote Org-mode and support its development by
+                getting your Org-mode T-shirt, bag, or cup in our stores 
+              (<a href="http://orgmode.spreadshirt.com">US-Shop</a> or
+                <a href="http://orgmode.spreadshirt.de">EU-Shop</a>)
+              </span>
+            </td>
+          </tr>
      
-      <td style="vertical-align:top;">
-        <div style="float:bottom; border:0px solid black; 
-                    padding:3px; vertical-align:bottom;">
-            <form  style="float:right;padding:3px; name="_xclick" 
-                   action="https://www.paypal.com/cgi-bin/webscr" method="post">
-              <div>
-                <input type="hidden" name="cmd" value="_xclick" />
-                <input type="hidden" name="business" value="carsten.dominik@gmail.com" />
-                <input type="hidden" name="item_name" value="Donate to Org-mode" />
-                <input type="hidden" name="currency_code" value="USD" />
-                <input type="hidden" name="lc" value="US"/>
-                <input type="hidden" name="amount" />
-                <input type="image" style="text-align:right;margin-left:auto;margin-right:0px;border-style:none;"
-                       src="http://www.paypal.com/en_US/i/btn/x-click-but04.gif" 
-                       name="submit" 
-                       alt="Make payments with PayPal - it's fast, free and secure!" />
-            </div>
-          </form>
-          <span style="font-size: 80%;">
-            ... or by making a direct donation.</span>
-        </div>
+          <tr>
+            <td style="vertical-align:top;">
+              <div style="float:bottom; border:0px solid black; 
+                          padding:3px; vertical-align:bottom;">
+                <form  style="float:right;padding:3px;" name="_xclick" 
+                       action="https://www.paypal.com/cgi-bin/webscr" method="post">
+                  <div>
+                    <input type="hidden" name="cmd" value="_xclick" />
+                    <input type="hidden" name="business" value="carsten.dominik@gmail.com" />
+                    <input type="hidden" name="item_name" value="Donate to Org-mode" />
+                    <input type="hidden" name="currency_code" value="USD" />
+                    <input type="hidden" name="lc" value="US"/>
+                    <input type="hidden" name="amount" />
+                    <input type="image" style="text-align:right;margin-left:auto;margin-right:0px;border-style:none;"
+                           src="http://www.paypal.com/en_US/i/btn/x-click-but04.gif" 
+                           name="submit" 
+                           alt="Make payments with PayPal - it's fast, free and secure!" />
+                  </div>
+                </form>
+                <span style="font-size: 80%;">
+                  ... or by making a direct donation.</span>
+              </div>
+            </td>
+          </tr>
+        </table>
       </td>
-    </tr>
-    </table>
+  </table>
 #+end_html
 
 - Simplicity :: Org-mode is a simple outliner for note-taking and list
