--- a/index.org
+++ b/index.org
@@ -85,22 +85,28 @@
   </table>
 #+end_html
 
-- Simplicity :: Org-mode is a simple outliner for note-taking and list
-     management. You can learn the basics for using it in [[http://orgmode.org/worg/org-tutorials/orgtutorial_dto.php][five
-     minutes]].  This may be all you need, and Org-mode will not impose
-     more complex features on you.
-- Portability :: Org files are plain text.  You can view and edit them
-     in any editor.  Your data is yours forever.  Org-mode runs in
-     [[http://www.gnu.org/software/emacs/][Emacs]], which is available for nearly every platform.
+- Simplicity :: At its core, Org-mode is a simple outliner for
+     note-taking and list management. You can learn the basics for
+     using it in [[http://orgmode.org/worg/org-tutorials/orgtutorial_dto.php][five minutes]].  This may be all you need, and Org-mode
+     will not impose more complex features on you.
+- Portability :: Org files are [[http://en.wikipedia.org/wiki/Plain_text][plain text]].  You can view and edit them
+     in any editor, or add and extract data with custom-made scripts.
+     Your data will never be locked into an obscure or proprietary
+     data format.  Org-mode runs in [[http://www.gnu.org/software/emacs/][Emacs]], which is available for
+     nearly every platform.
 - Depth :: Org-mode will not let you down when you need more than a
-     simple outline.  The full feature set is both [[http://orgmode.org/manual/Main-Index.html#Main-Index][broad]] and [[http://orgmode.org/manual/index.html][deep]].
-     The typical [[http://orgmode.org/worg/org-faq.php][answer]] to "/Can it do X?/" is "/Yes!/".
+     simple outline.  The full feature set is both broad and deep,
+     easy to access, but unobtrusive.  The [[http://orgmode.org/worg/org-faq.php][typical answer]] to "/Can it
+     do X?/" is "/Yes!/".
 - Flexibility :: Org-mode is like a Swiss army knife.  People use it
      for [[http://members.optusnet.com.au/~charles57/GTD/orgmode.html][Getting Things Done (GTD)]], as a [[http://www.newartisans.com/blog_files/org.mode.day.planner.php][Day Planner]], as a [[http://sachachua.com/wp/2008/01/18/outlining-your-notes-with-org/][Notebook]],
      for Web and PDF [[http://orgmode.org][Authoring]], and much more.
-- Support :: Org-mode is supported by an active [[id:0B280B26-A3AB-4E5C-B4EE-B7FFC52C4D26][mailing list]] where
-     questions are answered quickly and effectively.
+- Support :: Org-mode is [[http://orgmode.org/manual/index.html][documented extensively]], and many [[http://orgmode.org/worg/org-tutorials/index.php][tutorials]]
+     put spotlights on particular features.  Org-mode is supported by
+     an active [[id:0B280B26-A3AB-4E5C-B4EE-B7FFC52C4D26][mailing list]] where questions are answered quickly and
+     effectively.
 - It's free! :: Org is [[http://en.wikipedia.org/wiki/Open-source_software][open source software]], it is [[http://www.gnu.org/licenses/licenses.html#GPL][free]], like Emacs.
+
 
 If you'd like to know what other people have said about Org-mode, take
 a look at our [[http://orgmode.org/worg/org-quotes.php][collected quotes about Org]].
