--- a/index.org
+++ b/index.org
@@ -117,6 +117,7 @@ a look at our [[http://orgmode.org/worg/org-quotes.php][collected quotes about O
 #+ATTR_HTML: style="float:right;"
   [[http://mobileorg.ncogni.to/][http://mobileorg.ncogni.to/images/screenshot-browse.png]]
 
+- <2010-01-10 Sun>: Release 6.33
 - <2009-12-15 Tue>: iPhone App [[http://mobileorg.ncogni.to/][MobileOrg]] version 1.1 available
 - <2009-11-13 Fri>: Release 6.33
 - <2009-11-03 Tue>: iPhone App [[http://mobileorg.ncogni.to/][MobileOrg]] available in the AppStore
@@ -125,9 +126,9 @@ a look at our [[http://orgmode.org/worg/org-quotes.php][collected quotes about O
 - <2009-09-01 Tue>: Release 6.30
 - <2009-08-04 Tue>: Release 6.29
 
-* Current Version (6.33f)
+* Current Version (3.34)
 
-The current version is 6.33f.  To see what has changed in recent
+The current version is 3.34.  To see what has changed in recent
 releases, check this detailed list of [[file:Changes.html][user-visible changes]].
 
 This package works on Emacs 23 and 22, and (with minor restrictions)
@@ -139,7 +140,7 @@ recent version, but may lag a bit behind the website release.
 
 ** The standard distribution
 
-Download as [[file:org-6.33f.zip][zip file]] or [[file:org-6.33f.tar.gz][gzipped tar archive]].  These archives contain
+Download as [[file:org-3.34.zip][zip file]] or [[file:org-3.34.tar.gz][gzipped tar archive]].  These archives contain
 both the Lisp file org.el and the documentation in PDF and (TeX)Info
 formats.  Follow the instructions for [[http://orgmode.org/manual/Installation.html#Installation][Installation]] and [[http://orgmode.org/manual/Activation.html#Activation][Activation]].
 
