--- a/index.org
+++ b/index.org
@@ -193,9 +193,9 @@ and corresponding to the latest git version.
 * Links
 
 
-** Talks about Org-mode, by Carsten Dominik
-   Check out the [[file:talks/index.org::#sec-1.1][Google Tech Talk]] about Org-mode, and the talk given
-   at the [[file:talks/index.org::#sec-1.2][Max Planck Institute for Neurological Research]]
+** Talks about Org-mode
+   [[file:talks/index.org::#sec-1][Google Tech Talk]] about Org-mode
+   at the [[file:talks/index.org::#sec-2][Max Planck Institute for Neurological Research]]
 ** Mailing list
    :PROPERTIES:
    :ID:       0B280B26-A3AB-4E5C-B4EE-B7FFC52C4D26
