--- a/talks/index.org
+++ b/talks/index.org
@@ -1,12 +1,11 @@
-#+Title:     Google Tech Talk about Emacs Org-mode
+#+Title:     Talks about Org-mode, by Carsten Dominik
 #+AUTHOR:    Carsten Dominik
 #+EMAIL:     carsten.dominik@gmail.com
-#+DATE:      July 15, 2008
+#+DATE:      March 5, 2010
 #+LANGUAGE:  en
 #+OPTIONS:   H:3 num:nil toc:t \n:nil @:t ::t |:t ^:{} -:t f:t *:t TeX:t LaTeX:t skip:nil d:nil tags:not-in-toc
 
-* Talks by Carsten Dominik about Org-mode
-** Google Tech Talk
+* Google Tech Talk
 
 Here it the video of the [[http://research.google.com/video.html][Google Tech Talk]] about [[http://orgmode.org][Org-mode]] that I
 (Carsten Dominik) gave on July 15th, 2008 on the Google campus in
@@ -28,7 +27,7 @@ keynote]] and [[file:Google-Tech-Talk-Org-mode.ppt][Microsoft Powerpoint]] versi
 all these files available under the [[http://creativecommons.org/licenses/by/3.0/][creative commons license]]
 (attribution).
 
-** Talk at the Max-Planck Institute for Neurology in Cologne
+* Talk at the Max-Planck Institute for Neurology in Cologne
 
 There a video of the Org-mode talk at the Max-Planck Institute for
 Neurological Research about [[http://orgmode.org][Org-mode]] that I (Carsten Dominik) gave on
